# pyQI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pypi-publish.yml  python-tests.yml
pyQi/: QiApi.py  QiApi_async.py  __init__.py  common.py  json_builder.py  pyQi.py  pyQi_api.py  pyQi_api_async.py  samples.json  xltojson.py
samples/: POST Sample.json  PUT Sample.json
tests/: test_common_auth_flows.py  test_common_module.py  test_field_encoding_and_lookups.py  test_json_builder.py  test_qiapi_async_edges.py  test_qiapi_async_error_paths.py  test_qiapi_async_exports.py  test_qiapi_async_find_record.py  test_qiapi_async_requests.py  test_qiapi_sync_edges.py  test_qiapi_sync_exports.py  test_qiapi_sync_find_record.py  test_response_exception_handler.py
