[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqi_api"
version = "1.1.0"
authors = [
    {name="Christopher Prince", email="c.pj.prince@gmail.com"}
    ]
description = "Python Module for QI Content and Collections Management System by Keepthinking"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["archiving","archives","digital archiving","CMS","QI","Keepthinking"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving"
    ]
dependencies = [
    "pandas",
    "openpyxl",
    "aiohttp",
    "requests",
    "keyring"
    ]

[project.urls]
Homepage = "https://github.com/CPJPRINCE/pyqi"
Issues = "https://github.com/CPJPRINCE/pyqi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ['.']
include = ['pyQi']
exclude = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]